# devscale-assignment1

./: README.md  main.py  pyproject.toml
alembic/: env.py
alembic/versions/: 07e5531d8457_init_db.py
app/: database.py  main.py  schema.py  setting.py
app/routes/: students.py
data/: student_data.db
